Removed fonts folder and modified navbar and package.json.

--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "MEAN_MVC_4thTutorial",
+  "name": "SuperCap",
   "version": "1.0.0",
-  "description": "Code acompanying the [third blog post](not yet published)",
+  "description": "A toy-model of a SuperCapacitor",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Hitman666/MEAN_MVC_4thTutorial.git"
+    "url": "https://github.com/vladislavivanistsev/SuperCap.git"
   },
-  "keywords": [
-    "MEAN",
-    "MVC"
-  ],
-  "author": "Nikola Brežnjak <nikola.breznjak@gmail.com> (http://www.nikola-breznjak.com/)",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Hitman666/MEAN_MVC_4thTutorial/issues"
-  },
-  "homepage": "https://github.com/Hitman666/MEAN_MVC_4thTutorial",
+  "homepage": "",
   "dependencies": {
     "body-parser": "^1.10.1",
     "connect-flash": "^0.1.1",
@@ -28,8 +19,6 @@
     "express-session": "^1.10.1",
     "mongoose": "4.1.7",
     "passport": "^0.2.1",
-    "passport-facebook": "^1.0.3",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.2"
+    "passport-local": "^1.0.0"
   }
 }
